--- a/index.html
+++ b/index.html
@@ -289,10 +289,10 @@ Our goal is to make fitamize a tool trainers and client’s will love.</p>
 
 							<div class="4u">
 								<div class="row">
-									<div class="2u">
-									icon
+									<div class="3u">
+									<img src="images/discount-image.png"/>
 									</div>
-									<div class="10u">
+									<div class="9u">
 									<p>Discounted price for life when we launch</p>
 									</div>
 								</div>
@@ -300,10 +300,10 @@ Our goal is to make fitamize a tool trainers and client’s will love.</p>
 
 							<div class="4u">
 								<div class="row">
-									<div class="2u">
-									icon
+									<div class="3u">
+									<img src="images/yoursay-image.png"/>
 									</div>
-									<div class="10u">
+									<div class="9u">
 									<p>Have your say in what features are added</p>
 									</div>
 								</div>
@@ -311,10 +311,10 @@ Our goal is to make fitamize a tool trainers and client’s will love.</p>
 
 							<div class="4u">
 								<div class="row">
-									<div class="2u">
-									icon
+									<div class="3u">
+									<img src="images/early-image.png"/>
 									</div>
-									<div class="10u">
+									<div class="9u">
 									<p>Free early access to features as we build</p>
 									</div>
 								</div>
@@ -328,19 +328,19 @@ Our goal is to make fitamize a tool trainers and client’s will love.</p>
 
 				<footer>
 				<div class="container">
-					<form role="form" class="clearfix registration-form" action="http://fitamize.us8.list-manage.com/subscribe/post?u=49bfdf69afdd50093f4fc89cf&amp;id=2fd6c0cdfc" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form">
+					<form role="form" action="http://fitamize.us8.list-manage.com/subscribe/post?u=49bfdf69afdd50093f4fc89cf&amp;id=2fd6c0cdfc" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form">
 
 							<div class="col-sm-6">
 								<div class="form-group">
 
 									<label for="mce-FNAME">First Name</label>
-									<input type="text" value="" class="form-control" name="FNAME" id="mce-FNAME">
+									<input type="text" value=""  name="FNAME" id="mce-FNAME">
 								</div>
 							</div>
 							<div class="col-sm-6">
 								<div class="form-group">
 									<label for="mce-LNAME">Last Name</label>
-									<input type="text" value="" class="form-control" name="LNAME" id="mce-LNAME">
+									<input type="text" value="" name="LNAME" id="mce-LNAME">
 								</div>
 							</div>
 
@@ -349,13 +349,13 @@ Our goal is to make fitamize a tool trainers and client’s will love.</p>
 								<div class="form-group">
 
 									<label for="mce-EMAIL">Email Address</label>
-									<input type="email" value="" class="form-control" name="EMAIL" id="mce-EMAIL">
+									<input type="email" value="" name="EMAIL" id="mce-EMAIL">
 								</div>
 							</div>
 							<div class="col-sm-12">
 								<div class="form-group">
 
-									<button name="subscribe" type="submit" class="btn btn-primary btn-block">Register your interest</button>
+									<button name="subscribe" type="submit" class="button style3">Register your interest</button>
 								</div>
 							</div>
 
