--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@ fb_param.currency = 'AUD';
 				
 				<header>
 
-				<div class="container">
+				<div class="container small">
 
 				<div class="row">
 
