--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@ fb_param.currency = 'AUD';
 						<div class="row">
 							<div class="12u">
 								<h2>Let us introduce ourselves</h2>
-								<p>We are a small team of passionate web professionals with a love for fitness. Our goal is to make fitamize a tool trainers and client’s will love.</p>
+								<p>We are a small team of passionate web professionals with a love for fitness. Our goal is to make fitamize a tool that trainers and client’s will love.</p>
 							</div>
 						</div>
 						<div class="row">
