update tag content

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ fb_param.currency = 'AUD';
 
 					<div class="row">
 						<div class="12u">
-							<h1><strong>Trainers &amp; Fitness Professionals</strong></h1>
+							<h1><strong>You train them, we'll track them.</strong></h1>
 					<p>Engage with your clients and give them the information to keep motivated even when they are not training.</p>
 						</div>
 					</div>
