blog button and top button

--- a/index.html
+++ b/index.html
@@ -54,8 +54,16 @@ fb_param.currency = 'AUD';
 
 
 	</head>
-	<body>
+	<body class="index loading">
 
+		<section id="menu" class="alt">
+		<a href="#header" class="top-button button scrolly">top</a>
+			<nav id="nav">
+					<ul>
+						<li><a class="button" href="http://blog.fitamize.com">View our Blog</a></li>
+					</ul>
+				</nav>
+		</section>
 
 		<section id="header">
 
